// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should right render 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.00
     
  </h1>
</div>
`;

exports[`should right render 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totaling 
    $33.00
     
  </h1>
</div>
`;
